--- a/app/views/user_mailer/_invite.html.haml
+++ b/app/views/user_mailer/_invite.html.haml
@@ -1,11 +1,12 @@
 %tr
+  = render 'header'
   %td
-    %h1{:style => "margin:40px 0 0;"} Welcome to Hound.cc!
+    %h1{:style => "color:#582a00;margin:40px 0 10px;"} Welcome to Hound.cc!
 
 = render 'send_at'
 
 %tr
-  %td
+  %td{ :width => "70%"}
     %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
 
 %tr
