--- a/app/views/user_mailer/_body.html.haml
+++ b/app/views/user_mailer/_body.html.haml
@@ -1,8 +1,5 @@
 %tr
-  %td{:colspan=>"2"}
-    %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
-%tr
-  %td{:colspan=>"2", :style => "padding-bottom: 40px;"}
+  %td{:colspan=>"2", :style => "font-size:12px;padding: 20px;"}
     - unless body.empty?
       = body
     - else
