--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,11 +1,12 @@
+- render "variables"
+
 !!!
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "background:url(http://hound.cc/assets/bg.png) #fef4e0;font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
+  %body{:style => "background:url(http://hound.cc/assets/bg.png) #fef4e0;font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:0;padding:20px 0 0;line-height:1.4;border-top:4px dashed #f1decb;"}
     %table{:style => "margin: 0 auto;width:600px;"}
       %tbody
-        
         %tr
           %td{ :width => "70%"}
             %h1{:style => "color:#582a00;margin:40px 0 10px;"} Hello #{@resource.email}!
@@ -15,7 +16,6 @@
             %p Someone has requested a link to change your password, and you can do this through the link below.
             %p= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), :style => "color: #E88300"
         = render 'user_mailer/hr'
-
         %tr
           %td
             %p If you didn't request this, please ignore this email.
