--- a/app/views/user_mailer/_footer.html.haml
+++ b/app/views/user_mailer/_footer.html.haml
@@ -1,7 +1,11 @@
 = render 'hr'
 %tr
-  %td
+  %td{:style=>"vertical-align:top;"}
     %p{:style=>"margin: 0;"}
       = link_to "Upcoming", reminders_url, :style => "color: #{@link_color}; margin-right:5px;"
       = link_to "Settings", settings_url, :style => "color: #{@link_color}; margin-right:5px;"
-    %p{:style => "color:#999;font-style:italic;margin:3px 0 20px;font-size:11px"} © 2012 Siyelo Software. All rights reserved.
+  %td{:style=>"text-align: right;"}
+    %p{:style => "color:#999;font-style:italic;margin:3px 0 20px;font-size:11px"}
+      © 2012 Siyelo Software.
+      %br
+      All rights reserved.
