--- a/app/views/user_mailer/_hr.html.haml
+++ b/app/views/user_mailer/_hr.html.haml
@@ -1,3 +1,3 @@
 %tr
   %td{:colspan => "100"}
-    %hr{:style => "background:none;border:none;border-top:1px solid #ead5c0;"}
+    %hr{:style => "background:none;border:none;border-top:1px dashed #f1decb;"}
