--- a/app/views/user_mailer/_body.html.haml
+++ b/app/views/user_mailer/_body.html.haml
@@ -4,9 +4,9 @@
     %table
       %tbody
         %tr
-          %td{:width=>"10%"}
-            %span{:style=>"font-size:50px;color:#f1decb;font-family:arial, sans-serif;line-height:1;"} "
-          %td{:width=>"90%", :style => "font-size:12px;padding: 20px 20px 20px 7px;"}
+          %td{:width=>"4%", :style=>"vertical-align:top;"}
+            %span{:style=>"font-size:50px;color:#f1decb;font-family:georgia,arial, sans-serif;line-height:1;font-style:italic;"} "
+          %td{:width=>"96%", :style => "padding: 20px 20px 20px 7px; color: rgb(88, 42, 0); font-family: Georgia New Roman; font-size: 14px;"}
             - unless body.empty?
       
               = body
