--- a/app/views/user_mailer/_snooze_box.html.haml
+++ b/app/views/user_mailer/_snooze_box.html.haml
@@ -1,4 +1,4 @@
-%div{:style => "background-color:#fffbef;border: 1px solid #ead5c0;padding:5px"}
+%div{:style => "background-color:#fffbef;border: 1px solid #ead5c0;padding:10px 15px;margin-bottom:10px;"}
   %table{:border => "0", :cellpadding => "4", :cellspacing => "0", :width => "100%"}
     %tbody
       %tr
