--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,4 +1,4 @@
-- render "variables"
+- render "user_mailer/variables"
 
 !!!
 %html
@@ -9,14 +9,18 @@
       %tbody
         %tr
           %td{ :width => "70%"}
-            %h1{:style => "color:#582a00;margin:40px 0 10px;"} Hello #{@resource.email}!
-          = render 'user_mailer/header'
-        %tr
-          %td
-            %p Someone has requested a link to change your password, and you can do this through the link below.
+            %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"} Hello #{@resource.email}!
+            %p{:style => "font-size:12px;line-height:1.4;color:#444;margin:0 0 15px;"}
+              Someone has requested a link to change your password,
+              %br
+              and you can do this through the link below.
             %p= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token), :style => "color: #E88300"
+          = render 'user_mailer/header'
         = render 'user_mailer/hr'
         %tr
-          %td
-            %p If you didn't request this, please ignore this email.
-            %p Your password won't change until you access the link above and create a new one.
+          %td{:colspan => "2"}
+            %p{:style => "line-height:1.4;font-size:11px;margin:10px 0 0;color:#999;"}
+              If you didn't request this, please ignore this email.
+              %br
+              Your password won't change until you access the link above and create a new one.
+        = render 'user_mailer/footer'
