--- a/app/views/user_mailer/_confirmation.html.haml
+++ b/app/views/user_mailer/_confirmation.html.haml
@@ -1,7 +1,7 @@
 %tr
   
   %td{ :width => "70%"}
-    %h1{:style => "color:#582a00;margin:40px 0 10px;"} We've set your reminder!
+    %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"} We've set your reminder!
     = render 'send_at'
     %p{:style => "padding:10px 0 0;border-top:1px dotted #ffe2a8;margin: 30px 0 10px;color:#999;font-size:11px;"}
       Don't need a confirmation every time you schedule a reminder?
