--- a/app/views/user_mailer/_header.html.haml
+++ b/app/views/user_mailer/_header.html.haml
@@ -1,4 +1,4 @@
 
 %td{ :width => "30%", :style=>"padding: 20px 0;vertical-align:middle;"}
-  = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;color:#fff;text-decoration:none;font-size:18px;font-weight:bold;" do
-    = image_tag"http://www.hound.cc/assets/logo-alt.png", :alt => "Hound.cc logo", :title => "Hound.cc - Turn Your Emails Into Reminders"
+  = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;color:#582a00;text-decoration:none;font-size:18px;font-weight:bold;" do
+    = image_tag"http://www.hound.cc/assets/logo-alt.png", :alt => "Hound.cc", :title => "Hound.cc - Turn Your Emails Into Reminders"
