--- a/app/views/user_mailer/_invite.html.haml
+++ b/app/views/user_mailer/_invite.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td{ :width => "70%"}
-    %h1{:style => "color:#582a00;margin:40px 0 10px;"} Welcome to Hound.cc!
+    %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"} Welcome to Hound.cc!
 
     = render 'send_at'
   = render 'header'
