--- a/app/views/user_mailer/_send_at.html.haml
+++ b/app/views/user_mailer/_send_at.html.haml
@@ -1,5 +1,5 @@
 
-%p
+%p{:style => "font-size:12px;line-height:1.4;color:#444;margin:0 0 15px;"}
   We'll send you a reminder for
   %b= link_to @original_subject, @edit_reminder_url, :style => "color: #{@link_color}"
   %br
