--- a/app/views/user_mailer/_snooze_box.html.haml
+++ b/app/views/user_mailer/_snooze_box.html.haml
@@ -10,4 +10,4 @@
         = render 'snooze_link', :options => ['1','2','4','7'], :type => 'd'
         = render 'snooze_link', :options => ['1','2','3','4'], :type => 'w'
       %tr
-        %td= link_to 'Choose another time', edit_reminder_url(@reminder), :style => "color:#{@link_color}; margin-top:5px;"
+        %td= link_to 'Choose another time', edit_reminder_url(@reminder), :style => "color:#{@link_color}; margin-top:5px;font-size:12px;"
