--- a/app/views/user_mailer/reminder.html.haml
+++ b/app/views/user_mailer/reminder.html.haml
@@ -9,7 +9,7 @@
       %tbody
         %tr
           %td{ :width => "70%"}
-            %h1{:style => "color:#582a00;margin:40px 0 10px;"}= "#{@original_subject}"
+            %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"}= "#{@original_subject}"
             %p{:style => "font-size:12px;line-height:1.4;color:#444;margin:0 0 15px;"}
               == You created this reminder on #{@created_at}
               %br
