--- a/app/views/devise/mailer/invitation_instructions.html.haml
+++ b/app/views/devise/mailer/invitation_instructions.html.haml
@@ -1,4 +1,4 @@
-- render "variables"
+- render "user_mailer/variables"
 
 !!!
 %html
@@ -10,7 +10,7 @@
         
         %tr
           %td{ :width => "70%"}
-            %h1{:style => "color:#582a00;margin:40px 0 10px;"} Hello #{@resource.email}!
+            %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"} Hello #{@resource.email}!
           = render 'user_mailer/header'
         %tr
           %td
@@ -23,3 +23,4 @@
               If you don't want to accept the invitation, please ignore this email.
               %br
               Your account won't be created until you access the link above and set your password.
+        = render 'user_mailer/footer'
