--- a/app/views/user_mailer/recipient_reminder.html.haml
+++ b/app/views/user_mailer/recipient_reminder.html.haml
@@ -10,9 +10,9 @@
         
         %tr
           %td{ :width => "70%"}
-            %h1{:style => "color:#582a00;margin:40px 0 10px;"}= "Reminder: #{@original_subject}"
+            %h1{:style => "color:#582a00;margin:40px 0 10px;font-size:24px;"}= "Reminder: #{@original_subject}"
 
-            %p
+            %p{:style => "font-size:12px;line-height:1.4;color:#444;margin:0 0 15px;"}
               %b== #{@owner}
               created this reminder for you on
               %b==#{@created_at}
