Refactoring and clean-ups
  * Fixed mail specs
  * Renamed EmailParser to TimeParser
  * Added time field to reminder model

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -173,3 +173,8 @@ ul.errors
 hr
   border: none
   border-top: 2px dotted #e6e6e6
+  clear: both
+
+.send_at
+  display: inline-block
+  margin-top: 5px
