--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -32,3 +32,12 @@
   float: left
 .right
   float: right
+
+.half
+  display: inline
+  float: left
+  width: 50%
+  +pie-clearfix
+
+.clear
+  clear: both
