--- a/app/views/reminders/edit.html.haml
+++ b/app/views/reminders/edit.html.haml
@@ -1,5 +1,5 @@
 .wrapper
-  .inline_reminder
-    %h2 Edit Reminder
-    = render 'form'
-  %br
+  #devise.wide
+    .inline_reminder
+      %h2 Edit Reminder
+      = render 'form'
