--- a/app/assets/stylesheets/partials/_content.sass
+++ b/app/assets/stylesheets/partials/_content.sass
@@ -20,7 +20,9 @@
 .signup-wrap
   margin: 50px 15px 60px
   text-align: center
+  position: relative
   width: 40%
+  z-index: 3
   &.wide
     margin: 0
     padding: 40px 30%
@@ -230,4 +232,5 @@
     font-size: 14px
     +text-shadow(rgba(255, 255, 255, 0.4) 0 1px 1px)
   img
+    max-width: 180px
     width: 100%
