--- a/app/assets/stylesheets/partials/_header.sass
+++ b/app/assets/stylesheets/partials/_header.sass
@@ -29,24 +29,27 @@
     font-style: italic
     line-height: 1.4
     padding: 0 15px
+    position: relative
     width: 55%
+    z-index: 2
     +text-shadow(rgba(0, 0, 0, 0.5) 0 3px 1px)
   .hound
     bottom: 0px
     position: absolute
     right: 30px
-    z-index: 5
+    width: 32%
+    z-index: 1
 
 #logo
   float: left
   padding: 40px 0 0
   a
-    background: url(image_path("logo.png")) no-repeat center
+    //background: url(image_path("logo.png")) no-repeat center
     display: block
     height: 53px
     opacity: 0.8
-    overflow: hidden
-    text-indent: -9999px
+    //overflow: hidden
+    //text-indent: -9999px
     width: 178px
     +transition(all 0.5s ease)
     &:hover, &:focus
