--- a/app/assets/stylesheets/partials/_layout.sass
+++ b/app/assets/stylesheets/partials/_layout.sass
@@ -1,8 +1,9 @@
 .wrapper
   margin: 0 auto
   max-width: 1000px
+  min-width: 350px
   position: relative
-  width: 80%
+  width: 90%
   +pie-clearfix
 
 .horizontal
