small mobile screen optimization

--- a/app/assets/stylesheets/partials/_header.sass
+++ b/app/assets/stylesheets/partials/_header.sass
@@ -3,10 +3,12 @@
   text-align: center
   +pie-clearfix
   .flash
-    left: 43%
+    font-size: 11px
+    left: 38%
+    padding: 10px
     position: absolute
     top: 0
-    width: 14%
+    width: 24%
 
 #featured
   background: url(image_path("bg-brown.png")) $three
