uservoice styles tweak

--- a/app/assets/stylesheets/partials/_data.sass
+++ b/app/assets/stylesheets/partials/_data.sass
@@ -2,3 +2,12 @@
   font-size: 12px
   padding: 10px 5px
   text-align: center
+  
+#uvTab
+  background: #CC6D00 !important
+  color: #fff
+  text-align: center
+  a
+    padding: 6px 0 2px 0 !important
+  img
+    width: 80%
