--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -13,6 +13,8 @@
     p
       color: #777
       font: 16px/1.4 Amaranth
+      &.small
+        font-size: 14px
 
     a
       font-size: 16px
@@ -81,7 +83,7 @@
       background: #fff
       border-bottom: 1px solid #e9e9e9
       color: #666
-      padding: 8px 15px
+      padding: 10px 15px
       &:first-child
         color: $three
         font-weight: bold
@@ -178,3 +180,7 @@ hr
 .send_at
   display: inline-block
   margin-top: 5px
+
+.snoozed
+  background: url(image_path('snooze-clock.png')) no-repeat left center
+  padding-left: 45px
