--- a/app/assets/stylesheets/partials/_content.sass
+++ b/app/assets/stylesheets/partials/_content.sass
@@ -109,7 +109,12 @@
     padding-top: 15px
   .fbox
     width: 53%
-    +box-shadow(rgba(0, 0, 0, 0.1) 0 0 6px)
+    img
+      border: 1px solid rgba(0, 0, 0, 0.1)
+      width: 100%
+      +box-shadow(rgba(0, 0, 0, 0.1) 1px 1px 2px)
+      &:hover, &:focus
+        +box-shadow(rgba(0, 0, 0, 0.2) 1px 1px 2px)
   .tour-text
     color: #444
     float: left
