--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -34,7 +34,7 @@
 
 %section#content
   %ul.tour
-  
+
     %li
       .wrapper
         %span.number 1
@@ -53,34 +53,34 @@
               %h3= mail_to '', 'Bcc: nextfriday@hound.cc', bcc: 'nextfriday@hound.cc'
               %span › Sends only you a reminder next Friday.
         = image_tag("right-arrow.png", :width =>"50px", :class => "right-arrow")
-          
+
     %li.odd
       .wrapper
         %span.number 2
         .tour-content
           %h2 Get reminded (and never miss an opportunity to follow up)
-          = link_to image_tag('screen_web_ui_sml.jpg', :width=>"100%"), 'assets/screen_web_ui_lrg.jpg', class: 'fbox right'
-          
+          = link_to image_tag('screen_reminder_sml.jpg', :width=>"100%"), 'assets/screen_reminder_lrg.jpg', class: 'fbox right'
+
           %ul.tour-text
             %li
               %p Hound sends (great-looking) reminders when they're due. You can have other recipients also receive reminders, helping you get a response to that important email.
             %li
               %p We include the original email content, so all the information you need is right there.
         = image_tag("left-arrow.png", :width =>"50px", :class => "left-arrow")
-          
+
     %li
       .wrapper
         %span.number 3
         .tour-content
           %h2 Snooze it (or do it :-)
-          = link_to image_tag('screen_1day_sml.jpg', :width=>"100%"), 'assets/screen_1day_lrg.jpg', class: 'fbox left'
+          = link_to image_tag('screen_snooze_sml.jpg', :width=>"100%"), 'assets/screen_snooze_lrg.jpg', class: 'fbox left'
           %ul.tour-text
             %li
               %p Need to put off 'til tomorrow what doesnt need to be done today? Easy. Just snooze your Hound reminders with one click, right there from your inbox!
             %li
               %p (Snooze it, and discard it from your tidy inbox - let Hound worry about it for you!)
         = image_tag("right-arrow.png", :width =>"50px", :class => "right-arrow")
-            
+
     %li.odd
       .wrapper
         %span.number 4
