--- a/app/assets/stylesheets/partials/_responsive.sass
+++ b/app/assets/stylesheets/partials/_responsive.sass
@@ -116,6 +116,7 @@
     h3
       font-size: 14px
   #main-nav
+    background: rgba(0, 0, 0, 0.2)
     float: none
     position: relative
     z-index: 5
