--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -76,20 +76,24 @@
       img
         margin-bottom: -4px
         margin-right: 3px
+
   &.list
     margin-top: 10px
     +box-shadow(rgba(0, 0, 0, 0.07) 0 0 5px)
     .modern > tbody > tr > td
       background: #fff
-      border-bottom: 1px solid #e9e9e9
+      border-bottom: 1px solid #e4e4e4
       color: #666
-      padding: 10px 15px
+      padding: 12px 15px
       &:first-child
         color: $three
         font-weight: bold
       &.reminder_container
         background: $two + #777
         padding: 10px 20px
+      &.date
+        font-size: 11px
+        padding-left: 0
 
     .modern > tbody > tr
       &:last-child td
@@ -98,27 +102,25 @@
         > td
           background: $two + #777
       &.reminder.active td
-        background: $two + #777
+        background: $three + #d9d9d9
         border-style: dotted
+        
     input[type=checkbox]
       float: right
 
 .inline_reminder
+  hr
+    margin: 4px 0 8px
   h2
     margin: 40px 0 20px
   form
-    //background: #fff
-    //margin: 0 0 15px
-    //padding: 30px 15px 20px
-    padding-bottom: 10px
     position: relative
-    //+border-radius(3px)
-    //+box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
     +pie-clearfix
     label
       color: rgba(0, 0, 0, 0.5)
       display: block
       font: 14px Amaranth
+      margin-bottom: 2px
     .text-editor
       width: 55%
 
@@ -127,10 +129,23 @@
       font-size: 12px
       margin-bottom: 10px
       padding: 5px 10px
-      width: 246px
+      width: 160px
       +box-shadow(rgba(0, 0, 0, 0.1) 1px 1px 3px inset)
       &:hover, &:focus, &:active
         border-color: $one
+        
+.sent-to
+  color: #666
+  font-size: 11px
+  font-style: italic
+  font-weight: normal
+  line-height: 1.5
+  padding-bottom: 10px
+  a
+    color: $one
+    display: block
+    font-size: 11px
+    text-decoration: underline
 
 .reminder_list
   h3
@@ -143,10 +158,11 @@
 .modern
   font-size: 12px
   width: 100%
-  .large
-    width: 45%
-  .small
-    width: 10%
+  td, th
+    &.large
+      width: 45%
+    &.small
+      width: 10%
 
 #settings
   label
