--- a/app/assets/stylesheets/partials/_nav.sass
+++ b/app/assets/stylesheets/partials/_nav.sass
@@ -15,6 +15,7 @@
     padding: 70px 20px 30px
     text-decoration: none
     +text-shadow(#000 0 1px 0)
+    +transition(all .4s)
     &:hover, &:focus, &.active
       background: rgba(0, 0, 0, 0.2)
       border-bottom: 1px solid rgba(255, 255, 255, 0.1)
@@ -38,3 +39,4 @@
   a
     display: block
     font-size: 14px
+    text-decoration: underline
