[fixes #30767971] User can edit single reminder
  * Fixed bug user can edit reminder when opens reminder page from email
  * Removed jasmine experimental stuff
  * New guard/spork setup

--- a/app/views/reminders/edit.html.haml
+++ b/app/views/reminders/edit.html.haml
@@ -2,4 +2,4 @@
   #devise.wide
     .inline_reminder
       %h2 Edit Reminder
-      = render 'form'
+      = render 'form', reminder: @reminder, remote: false
