--- a/app/views/reminders/_reminder.html.haml
+++ b/app/views/reminders/_reminder.html.haml
@@ -1,8 +1,8 @@
-%tr.reminder{id: "reminder#{reminder.id}_row"}
+%tr.js_reminder_title{id: "reminder#{reminder.id}_row"}
   %td.large
     = link_to reminder_subject(reminder), edit_reminder_path(reminder)
   %td.large.date= reminder.send_at.to_formatted_s(:short_with_day)
 
-%tr{id: dom_id(reminder), class: "hidden reminder_row"}
+%tr{id: dom_id(reminder), class: "hidden js_reminder_body"}
   %td{colspan: "100", class: 'reminder_container'}
     .inline_reminder
