--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,7 @@
 - *= require jquery-ui-1.8.18.custom
 - *= require timePicker
 - *= require chosen
+- *= require jquery.fancybox-1.3.4.css
 - *= require_self
 - *= require ./screen
 - *= require ./buttons
@@ -11,7 +12,6 @@
 - *= require ./flashes
 - *= require ./notifications
 - *= require ./reminders
-- *= require ../javascripts/fancybox/jquery.fancybox-1.3.4.css
 - *= require_tree ./application
 - */
 
