[fixes #30772561] Fixed bug when trying to snooze unexisting reminder

--- a/app/views/snooze/snooze_failed.html.haml
+++ b/app/views/snooze/snooze_failed.html.haml
@@ -1,9 +1,13 @@
 #devise.wide
   %h2 Your reminder could not be snoozed
-  - if @reminder.snooze_token != params[:token]
-    %p The snooze token is no longer valid (we change it everytime you snooze a reminder to prevent accidental snoozing).
-    %br
-    %p Please login to manage your reminders.
+  - if @reminder
+    - if @reminder.snooze_token != params[:token]
+      %p The snooze token is no longer valid (we change it everytime you snooze a reminder to prevent accidental snoozing).
+      %br
+      %p Please login to manage your reminders.
+    - else
+      %p Please use the links in the reminder email to snooze the reminder.
+      %br
   - else
-    %p Please use the links in the reminder email to snooze the reminder.
+    %p We could not find the reminder with that snooze token.
     %br
