Fixed active reminder on reminder listing page

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -101,10 +101,10 @@
       &:hover, &:focus
         > td
           background: $two + #777
-      &.reminder.active td
+      &.reminder_title.active td
         background: $three + #d9d9d9
         border-style: dotted
-        
+
     input[type=checkbox]
       float: right
 
@@ -133,7 +133,7 @@
       +box-shadow(rgba(0, 0, 0, 0.1) 1px 1px 3px inset)
       &:hover, &:focus, &:active
         border-color: $one
-        
+
 .sent-to
   color: #666
   font-size: 11px
