--- a/app/views/reminders/_reminder.html.haml
+++ b/app/views/reminders/_reminder.html.haml
@@ -1,4 +1,4 @@
-%tr.js_reminder_title{id: "reminder#{reminder.id}_row"}
+%tr.reminder_title.js_reminder_title{id: "reminder#{reminder.id}_row"}
   %td.large
     = link_to reminder_subject(reminder), edit_reminder_path(reminder)
   %td.large.date= reminder.send_at.to_formatted_s(:short_with_day)
