--- a/app/views/reminders/edit.js.erb
+++ b/app/views/reminders/edit.js.erb
@@ -1,21 +1,8 @@
-var reminder_row = $("#<%= dom_id(@reminder) %>");
-var inline_reminder = reminder_row.find(".inline_reminder");
+var reminderBody = $("#<%= dom_id(@reminder) %>");
+var inlineReminder = reminderBody.find(".inline_reminder");
 
-$('.reminder_row').addClass('hidden');
-$('.reminder_row').find('.inline_reminder').html('');
+$('.js_reminder_body').addClass('hidden');
+$('.js_reminder_body').find('.inline_reminder').html('');
 
-reminder_row.removeClass('hidden');
-inline_reminder.html("<%=j render 'form', reminder: @reminder, remote: true %>").fadeIn(300);
-
-reminder_row.find('.reminder_body').tinymce({
-  theme: "advanced",
-  theme_advanced_buttons1: "bold,italic,underline, strikethrough",
-  theme_advanced_buttons2: "",
-  theme_advanced_buttons3: "",
-  theme_advanced_buttons4: "",
-  theme_advanced_toolbar_location: "top",
-  theme_advanced_toolbar_align: "left"
-});
-
-reminder_row.find('.reminder_formatted_time').timePicker();
-reminder_row.find('.reminder_formatted_date').datepicker({ dateFormat: 'yy-mm-dd' });
+reminderBody.removeClass('hidden');
+inlineReminder.html("<%= j render 'form', reminder: @reminder, remote: true %>").fadeIn(300);
